--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Área Restrita - Dashboard</title>
     <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/media-query.css">
     <script src="./js/script.js" defer></script>
     <script src="./js/powerbi.js" defer></script>
   </head>
