adicionando os links para as paginas que estão no menu e classes

--- a/src/index.html
+++ b/src/index.html
@@ -21,17 +21,17 @@
         <div class="header-direita">
           <nav>
             <ul>
-              <li><a href="#" id="menu-app">App</a></li>
-              <li><a href="#" id="menu-quemsomos">Quem Somos</a></li>
+              <li><a href="https://eden-landing-page.onrender.com/" id="menu-app">App</a></li>
+              <li><a href="https://eden-landing-page.onrender.com/html/edenQuemSomos.html" id="menu-quemsomos">Quem Somos</a></li>
             </ul>
-            <button id="logout">Sair</button>
+            <button id="logout" class="btn">Sair</button>
           </nav>
         </div>
       </div>
     </header>
 
     <main>
-      <button id="botao-dashboard">Mostrar Gráficos</button>
+      <button id="botao-dashboard" class="btn">Mostrar Gráficos</button>
 
       <section id="dashboard" style="display: none">
         <h2>Dashboard de Dados</h2>
