Updating the BI link, formatting the lines in the index and adding some styles

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Área Restrita - Dashboard</title>
     <link rel="stylesheet" href="./css/style.css" />
-    <link rel="stylesheet" href="./css/media-query.css">
+    <link rel="stylesheet" href="./css/media-query.css" />
     <script src="./js/script.js" defer></script>
     <script src="./js/powerbi.js" defer></script>
   </head>
@@ -13,16 +13,26 @@
     <header>
       <div class="container">
         <div class="header-esquerda">
-          <img src="./imagens/logoEden.png" alt="logo" id="edenLogo"/>
+          <img src="./imagens/logoEden.png" alt="logo" id="edenLogo" />
         </div>
         <div class="header-center">
-          <h1>Bem-vindo à Área Restrita</h1>
+          <h1>Área Restrita</h1>
         </div>
         <div class="header-direita">
           <nav>
             <ul>
-              <li><a href="https://eden-landing-page.onrender.com/" id="menu-app">App</a></li>
-              <li><a href="https://eden-landing-page.onrender.com/html/edenQuemSomos.html" id="menu-quemsomos">Quem Somos</a></li>
+              <li>
+                <a href="https://eden-landing-page.onrender.com/" id="menu-app"
+                  >App</a
+                >
+              </li>
+              <li>
+                <a
+                  href="https://eden-landing-page.onrender.com/html/edenQuemSomos.html"
+                  id="menu-quemsomos"
+                  >Quem Somos</a
+                >
+              </li>
             </ul>
             <button id="logout" class="btn">Sair</button>
           </nav>
