Updating main in layout and add <p>

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./css/media-query.css" />
     <script src="./js/script.js" defer></script>
     <script src="./js/powerbi.js" defer></script>
+    <link rel="shortcut icon" href="./imagens/logoEden.png">
   </head>
   <body>
     <header>
@@ -41,6 +42,7 @@
     </header>
 
     <main>
+      <p>Aqui nós temos um gráfico feito na plataforma PowerBI Desktop pelos integrantes de Dados do 2° ano para o admin poder ver tudo sobre ...</p>
       <button id="botao-dashboard" class="btn">Mostrar Gráficos</button>
 
       <section id="dashboard" style="display: none">
