--- a/src/index.html
+++ b/src/index.html
@@ -42,11 +42,10 @@
     </header>
 
     <main>
-      <p>Aqui nós temos um gráfico feito na plataforma PowerBI Desktop pelos integrantes de Dados do 2° ano para o admin poder ver tudo sobre ...</p>
+      <p>Aqui nós temos um gráfico feito na plataforma PowerBI Desktop pelos integrantes de Dados do 2° ano para o admin poder ver tudo sobre os pessoas que aceitaram ou não serem usuários de nosso aplicativo. Mostrando as <strong>Formas de Descarte, Produtos Descartados, Contagem de Respostas por Dias as Cidades onde moram</strong>, etc.</p>
       <button id="botao-dashboard" class="btn">Mostrar Gráficos</button>
 
       <section id="dashboard" style="display: none">
-        <h2>Dashboard de Dados</h2>
         <div id="powerbi-container"></div>
       </section>
     </main>
