Updating button 'Sair' and Adding <p> for a shortcut

--- a/src/index.html
+++ b/src/index.html
@@ -23,16 +23,10 @@
           <nav>
             <ul>
               <li>
-                <a href="https://eden-landing-page.onrender.com/" id="menu-app"
-                  >App</a
-                >
+                <a href="https://eden-landing-page.onrender.com/" id="menu-app">App</a>
               </li>
               <li>
-                <a
-                  href="https://eden-landing-page.onrender.com/html/edenQuemSomos.html"
-                  id="menu-quemsomos"
-                  >Quem Somos</a
-                >
+                <a href="https://eden-landing-page.onrender.com/html/edenQuemSomos.html" id="menu-quemsomos">Quem Somos</a>
               </li>
             </ul>
             <button id="logout" class="btn">Sair</button>
@@ -42,7 +36,10 @@
     </header>
 
     <main>
-      <p>Aqui nós temos um gráfico feito na plataforma PowerBI Desktop pelos integrantes de Dados do 2° ano para o admin poder ver tudo sobre os pessoas que aceitaram ou não serem usuários de nosso aplicativo. Mostrando as <strong>Formas de Descarte, Produtos Descartados, Contagem de Respostas por Dias as Cidades onde moram</strong>, etc.</p>
+      <p id="conteudo">Aqui nós temos um gráfico feito na plataforma PowerBI Desktop pelos integrantes de Dados do 2° ano para o admin poder ver tudo sobre os pessoas que aceitaram ou não serem usuários de nosso aplicativo. Mostrando as <strong>Formas de Descarte, Produtos Descartados, Contagem de Respostas por Dias as Cidades onde moram</strong>, etc.</p>
+      
+      <p id="aviso"><strong>Pressione Ctrl + Alt + U para mostrar ou ocultar o gráfico.</strong></p>
+      
       <button id="botao-dashboard" class="btn">Mostrar Gráficos</button>
 
       <section id="dashboard" style="display: none">
