Updating <p> and updating header

--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
     </header>
 
     <main>
-      <p id="conteudo">Aqui nós temos um gráfico feito na plataforma PowerBI Desktop pelos integrantes de Dados do 2° ano para o admin poder ver tudo sobre os pessoas que aceitaram ou não serem usuários de nosso aplicativo. Mostrando as <strong>Formas de Descarte, Produtos Descartados, Contagem de Respostas por Dias as Cidades onde moram</strong>, etc.</p>
+      <p id="conteudo"></p>
       
       <p id="aviso"><strong>Pressione Ctrl + Alt + U para mostrar ou ocultar o gráfico.</strong></p>
       
